--- a/learning_java/.classpath
+++ b/learning_java/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="POO - Área do triângulo"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
