--- a/learning_java/.classpath
+++ b/learning_java/.classpath
@@ -5,7 +5,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="Lógica de Programação"/>
 	<classpathentry kind="src" path="POO - Área do triângulo"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
