--- a/learning_java/.classpath
+++ b/learning_java/.classpath
@@ -7,5 +7,8 @@
 	</classpathentry>
 	<classpathentry kind="src" path="Lógica de Programação"/>
 	<classpathentry kind="src" path="POO - Área do triângulo"/>
+	<classpathentry kind="src" path="medidas_do_retangulo_POO"/>
+	<classpathentry kind="src" path="calculo_salario"/>
+	<classpathentry kind="src" path="notas_estudantes"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
